# phebe

./: Cargo.toml  Dockerfile  Makefile  README.md  fly.toml  fonts.css  main.css  main.js  nginx.conf  noto-sans-jp.css  prism.css  prism.js
.github/workflows/: ci.yml  fly.yml  phebe-build.yaml  phebe-orchestration.yaml  upload.yml
articles/: a-deep-dive-into-fiberplane-s-operational-transformation.html  announcing-fp-bindgen.html  creating-a-rich-text-editor-using-rust-and-react.html  creating-submenus-with-select3.html  how-i-made-text-clipper-fastest-html.html  how-to-multiple-redux-slice-instances.html  js-pipe-proposal-battle-of-perspectives.html  mvp-the-most-valuable-programmer.html  select3-v10-released.html  selectivity-v3-adds-react-support.html  selectivityjs-v110-improves-keyboard.html  why-im-excited-for-biomes-type-inference.html  why-we-at-fiberplane-use-ot-instead-of-crdt.html  writing-redux-reducers-in-rust.html
pages/: index.html  people.html  projects.html
phebe/: astro.config.mjs  package.json
phebe/public/js/: purify.js
phebe/src/: consts.ts  env.d.ts
phebe/src/components/: BaseHead.astro  Comments.astro  Footer.astro  GitHub.astro  Header.astro  RssIcon.astro  ThemeIcon.astro
phebe/src/content/: config.ts
phebe/src/layouts/: BlogPost.astro
phebe/src/pages/: consulting.astro  index.astro  projects.astro  rss.xml.js  terms-and-conditions.astro
phebe/src/styles/: fonts.css  global.css
src/: color_scheme.rs  document.rs  main.rs
src/components/: color_scheme.rs  document.rs  mod.rs
statics/: main.css
(+17 files in other folders)
