[package]
name = "phebe"
version = "0.1.0"
authors = ["Arend van Beelen jr. <arendjr@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1"
hyper = { version = "0.14", features = ["http1", "http2", "tcp", "server"] }
maplit = "1.0.2"
once_cell = "1"
palette = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
